--- a/public/index.html
+++ b/public/index.html
@@ -41,15 +41,9 @@
       // React.js ID
       gtag("config", "UA-118965717-6");
     </script>
-
-    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
-    <script type="text/javascript">
-       (function(){
-          emailjs.init("user_xhmLbsZRdduvRbwtNI5c3");
-       })();
-    </script>
-
     <script src="https://apis.google.com/js/client.js"></script>
+
+    %sumo-script%
   </head>
 
   <!-- BODY options, add following classes to body to change options
